ucs-school-webproxy (7.0.9-2) unstable; urgency=low

  * first move database files, then move new config (Bug #22465)

 -- Sönke Schwardt <schwardt@univention.de>  Tue, 10 May 2011 10:21:17 +0200

ucs-school-webproxy (7.0.9-1) unstable; urgency=low

  * prevent racing condition during recreation of squidGuard db files (Bug #22465)

 -- Sönke Schwardt <schwardt@univention.de>  Mon, 09 May 2011 19:21:26 +0200

ucs-school-webproxy (7.0.8-1) unstable; urgency=low

  * joinscript is not required anymore (Bug #20130)

 -- Sönke Schwardt <schwardt@univention.de>  Mon, 27 Sep 2010 13:34:50 +0200

ucs-school-webproxy (7.0.7-3) unstable; urgency=low

  * minor fixes in UCR variable documentation; Bug #18906

 -- Andreas Büsching <buesching@univention.de>  Thu, 23 Sep 2010 17:01:26 +0200

ucs-school-webproxy (7.0.7-2) unstable; urgency=low

  * fixed preinst (Bug #10229)

 -- Sönke Schwardt <schwardt@univention.de>  Wed, 22 Sep 2010 12:04:43 +0200

ucs-school-webproxy (7.0.7-1) unstable; urgency=low

  * copy /etc/init.d/squid.debian back to /etc/init.d/squid to make sure
    that the init.d-script exists (Bug #10229)

 -- Sönke Schwardt <schwardt@univention.de>  Tue, 21 Sep 2010 17:15:19 +0200

ucs-school-webproxy (7.0.6-1) unstable; urgency=low

  * set default of proxy/ntlmauth/keepalive to yes; Bug #18455

 -- Andreas Büsching <buesching@univention.de>  Tue, 21 Sep 2010 16:22:22 +0200

ucs-school-webproxy (7.0.5-1) unstable; urgency=low

  * add support for IP based authentication caching; Bug #18906

 -- Andreas Büsching <buesching@univention.de>  Mon, 20 Sep 2010 17:07:12 +0200

ucs-school-webproxy (7.0.4-1) unstable; urgency=low

  * new ucr variable proxy/ntlmauth/keepalive
  * register ucr variable proxy/ntlmauth/children (Bug #18455)

 -- Andreas Büsching <buesching@univention.de>  Wed, 15 Sep 2010 16:22:09 +0200

ucs-school-webproxy (7.0.3-1) unstable; urgency=low

  * convert to GNU APGL V3 (Bug #19780)
