@@ -1,6 +1,7 @@
 ucs-school-webproxy (7.0.9-2) unstable; urgency=low
 
   * first move database files, then move new config (Bug #22465)
+  * handle atomic cross-device move/rename
 
  -- Sönke Schwardt <schwardt@univention.de>  Tue, 10 May 2011 10:21:17 +0200
 
